Updated Alignment Issues for Mobile

--- a/src/css/Introduction.css
+++ b/src/css/Introduction.css
@@ -155,6 +155,7 @@
     }
 
     .intro-text {
+        align-self: center;
         align-items: center;
         flex: 1;
         justify-content: center;
