--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -96,8 +96,9 @@
 
 /* mobile */
 @media (max-width: 734px) {
-    .dash {
+    .projects-dash {
         height: 1.5px;
+        justify-self: center;
         width: 50px;
     }
 
@@ -108,6 +109,12 @@
         box-sizing: border-box;
         height: auto !important;
         width: 100%;
+    }
+
+    .project-card:hover {
+        background-color: rgba(255,255,255,0.16);
+        box-shadow: 0 0 12px rgba(255, 255, 255, 0.5);
+        transform: translateY(0px);
     }
 
     .project-card-formatting {
